# simple-file-manager

./: .gitmodules  CMakeLists.txt
src/: main.cpp
